add first style to createGame

--- a/site_form/Game/connectGame.html
+++ b/site_form/Game/connectGame.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Редактор</title>
-	<link rel="stylesheet" href="style.css">
+	<title>Подключение</title>
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 	
@@ -19,5 +19,6 @@
 		</p>
 		<!-- Форма ввода "кода для игры". Нужно изменить -->
 	</form>
+	
 </body>
 </html>
