--- a/site_form/Account/AccountLogin.html
+++ b/site_form/Account/AccountLogin.html
@@ -11,8 +11,12 @@
 		<form>
 			<fieldset>
 				<legend>ВХОД</legend>
-				<p><label for="login_in">Логин </label><input type="text" name="login_in" id="login_in"></p>
-				<p><label for="password_in">Пароль </label><input type="password" name="password_in" id="password_in"></p>
+				<p>
+					<label>Логин <input type="text" name="login_in" id="login_in"></label>
+				</p>
+				<p>
+					<label>Пароль <input type="password" name="password_in" id="password_in"></label>
+				</p>
 			</fieldset>
 			<p><input type="submit" value="Вход"></p>
 		</form>
