--- a/site_form/Game/table.html
+++ b/site_form/Game/table.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<!-- Таблица будет реализована в дальнейшем -->
 	
 	<center>
 		<section id="table-content">
