--- a/site_form/index.html
+++ b/site_form/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <!--  -->
+<head> <!-- Этот файл шаблон -->
 	<meta charset="UTF-8">
 	<title>Соревновательная Площадка</title>
 	<link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 				<li><a href="#">Аккаунт</a></li>
 				<li><a href="#">Игра</a>
 					<ul class="submenu">
-						<li><a href="#">Редактор</a></li>
+						<li><a href="#">Играть</a></li>
                         <li><a href="#">Создать Сессию</a></li>
 						<li><a href="#">Лидеры</a></li>
 					</ul>
@@ -50,7 +50,6 @@
 			<li>sometext sometext</li>
 			</ul>
 		</div>
-
 	</footer>
 
 </body>
