--- a/site_form/Account/AccountRegistration.html
+++ b/site_form/Account/AccountRegistration.html
@@ -3,28 +3,57 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Соревновательная Площадка</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="AccountStyle.css">
 </head>
 <body>
-
-	<div>
-		<form>
-			<fieldset>
-				<legend>РЕГИСТРАЦИЯ</legend>
-				<p>
-					<label>Логин <input type="text" name="login" id="login" required></label>
-				</p>
-				<p>
-					<label>Пароль <input type="password" name="password" id="password" required></label>
-				</p>
-				<p>
-					<label>Повторите пароль <input type="password" name="cpassword" id="cpassword" required></label>
-				</p>
-			</fieldset>
+	<header class="header">
+		<div class="headline">
+			<p><img src="logo.png" >Соревновательная Площадка</p>
+		</div><!-- Лого / Название width=40pt-->
+		<nav>
+			<ul class="head-menu">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Аккаунт</a></li>
+				<li><a href="#">Игра</a>
+					<ul class="submenu">
+						<li><a href="#">Играть</a></li>
+                        <li><a href="#">Создать Сессию</a></li>
+						<li><a href="#">Лидеры</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Справочник</a></li>
+			</ul>
+		</nav>
+		<!-- main-menu -->
+	</header>
+	
+	<main class="main centered-box">
+		<form method="post" action="" class="focus-block form-field">
+			<h2>РЕГИСТРАЦИЯ</h2>
+			<p>
+				<label>Логин <input type="text" name="login" id="login" required></label>
+			</p>
+			<p>
+				<label>Пароль <input type="password" name="password" id="password" required></label>
+			</p>
+			<p>
+				<label>Повторите пароль <input type="password" name="cpassword" id="cpassword" required></label>
+			</p>
 			<p><input type="submit" value="Регистрация"></p>
 		</form>
-	</div>
+	</main>
 	
+	<footer class="footer">
+		<div class="footer-info">
+			Проект был создан:
+			<ul>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			</ul>
+		</div>
+	</footer>
 </body>
 </html>
 
