--- a/site_form/Game/editor.html
+++ b/site_form/Game/editor.html
@@ -3,27 +3,62 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Редактор</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="GameStyle.css">
 </head>
 <body>
+	<header class="header">
+		<div class="headline">
+			<p><img src="logo.png" >Соревновательная Площадка</p>
+		</div><!-- Лого / Название width=40pt-->
+		<nav>
+			<ul class="head-menu">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Аккаунт</a></li>
+				<li><a href="#">Игра</a>
+					<ul class="submenu">
+						<li><a href="#">Играть</a></li>
+                        <li><a href="#">Создать Сессию</a></li>
+						<li><a href="#">Лидеры</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Справочник</a></li>
+			</ul>
+		</nav>
+		<!-- main-menu -->
+	</header>
 	
-	<form method="post" action="">
-		<fieldset>
-			<legend>Введите код для игры</legend>
-			<p>
-				<label>Id Игры<input type="text" name="game_id" id="game_id" required></label>
+	<main class="main centered-box">
+		<form method="post" action="" class="focus-block form-field">
+			<h2>Введите код для игры</h2>
+			<p>Информация о будущей игре: <!-- Нужно как то передать информацию об аккаунте -->
+				<ul>
+					<li>Режим: Змейка</li>
+					<li>Карта: Река</li>
+					<li>Число игроков: 23</li>
+				</ul>
 			</p>
-			<p>+ Информация о будущей игре</p>
-			<!-- Нужно как то передать информацию об аккаунте -->
-			<p>
-				<textarea name="game_code" cols="40" rows="20" required></textarea>
-			</p>
-		</fieldset>
-		<p>
-			<input type="submit" value="Отправить">
-			<input type="reset" value="Очистить">
-		</p>
-		<!-- Форма ввода "кода для игры". Нужно изменить -->
-	</form>
+			
+			<textarea name="game_code" cols="40" rows="20" required></textarea>
+			
+			<div class="centered-box">
+				<input type="submit" value="Отправить">
+				<input type="reset" value="Очистить">
+			</div>
+			<!-- Форма ввода "кода для игры". Нужно изменить -->
+		</form>
+	</main>
+	
+	<footer class="footer">
+		<div class="footer-info">
+			Проект был создан:
+			<ul>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			</ul>
+		</div>
+	</footer>
+	
 </body>
 </html>
