add css for AccountInfo

--- a/site_form/Account/AccountInfo.html
+++ b/site_form/Account/AccountInfo.html
@@ -29,41 +29,49 @@
 		<!-- main-menu -->
 	</header>
 	
-	<main class="main">
+	<main class="main centered-box">
 		<section class="InfoBlog">
-			<img src="../logo.png" style="display: inline-block;">
-			<div class="info-field short-info" style="display: inline-block;">
-				<!-- Аватарка + краткая информация -->
-				<p>
-					Петров Петя
-				</p>
-				<p>
-					Петров Петя
-				</p>
+			<div class="top-info">
+				<img src="profile_stub.png" class="profile_logo">
+				<div class="short info-field">
+					<p>Петров Петя</p>
+					<p>mail@gm.com</p>
+				</div>
 			</div>
-			<div class="info-field full-info">
-				<div><!-- О себе -->
-					О себ:
+			
+			<div class="middle-info info-field">
+				<div>
+					<table>
+						<tr><td>Имя:</td><td>Петя</td></tr>
+						<tr><td>Фамилия:</td><td>Петров</td></tr>
+						<tr><td>Пол</td><td>М</td></tr>
+					</table>
+				</div>
+				<br>
+				<div>
+					<p>О себ:</p>
 					<p>
 					Нарушил основной закон алхимии и остался без руки и ноги, 
 					профит Высокий После основного сюжета увлёкся питоном.
 					</p>
 				</div>
-				<div><!-- Информация об играх -->
+				<br>
+				<div>
 					<table>
-						<tr><td>Побед:</td><td>111</td></tr>
-						<tr><td>Всего игр:</td><td>211</td></tr>
-						<tr><td>Лучший счет:</td><td>321</td></tr>
+						<tr><td>Побед:</td><td>1</td></tr>
+						<tr><td>Всего игр:</td><td>2</td></tr>
+						<tr><td>Лучший счет:</td><td>3</td></tr>
 					</table>
 				</div>
-			</div class="info-field">	
-			<div class="info-field links-info">
-				<!-- Доп ссылки -->
+			</div>
+			
+			<div class="bottom-info info-field">
 				<ul>
 					<li>Телефон: +7 555 555 55 55</li>
 					<li>E-mail: valera@gm.ru</li>
 				</ul>
 			</div>	
+		
 		</section>
 	</main>
 
