--- a/site_form/Account/AccountInfo.html
+++ b/site_form/Account/AccountInfo.html
@@ -41,35 +41,47 @@
 			
 			<div class="middle-info info-field">
 				<div>
-					<table>
-						<tr><td>Имя:</td><td>Петя</td></tr>
-						<tr><td>Фамилия:</td><td>Петров</td></tr>
-						<tr><td>Пол</td><td>М</td></tr>
-					</table>
+					<dl class="attrs">
+						<dt>Имя</dt>
+							<dd>Петя</dd>
+						<dt>Фамилия</dt>
+							<dd>Петров</dd>
+						<dt>Пол</dt>
+							<dd>М</dd>
+					</dl>
 				</div>
 				<br>
 				<div>
-					<p>О себ:</p>
-					<p>
-					Нарушил основной закон алхимии и остался без руки и ноги, 
-					профит Высокий После основного сюжета увлёкся питоном.
-					</p>
+					<dl class="about">
+						<dt>О себе</dt>
+							<dd>Нарушил основной закон алхимии и остался без руки и ноги, 
+								профит Высокий После основного сюжета увлёкся питоном.
+								Нарушил основной закон алхимии и остался без руки и ноги, 
+								профит Высокий После основного сюжета увлёкся питоном.
+								Нарушил основной закон алхимии и остался без руки и ноги, 
+								профит Высокий После основного сюжета увлёкся питоном.</dd>
+					</dl>
 				</div>
 				<br>
 				<div>
-					<table>
-						<tr><td>Побед:</td><td>1</td></tr>
-						<tr><td>Всего игр:</td><td>2</td></tr>
-						<tr><td>Лучший счет:</td><td>3</td></tr>
-					</table>
+					<dl class="attrs">
+						<dt>Побед</dt>
+							<dd>1</dd>
+						<dt>Всего игр</dt>
+							<dd>2</dd>
+						<dt>Лучший счет</dt>
+							<dd>3</dd>
+					</dl>
 				</div>
 			</div>
 			
 			<div class="bottom-info info-field">
-				<ul>
-					<li>Телефон: +7 555 555 55 55</li>
-					<li>E-mail: valera@gm.ru</li>
-				</ul>
+				<dl class="attrs">
+					<dt>Телефон</dt>
+						<dd>+7 555 555 55 55</dd>
+					<dt>E-mail</dt>
+						<dd>mail@gm.com</dd>
+				</dl>
 			</div>	
 		
 		</section>
