--- a/site_form/Game/table.html
+++ b/site_form/Game/table.html
@@ -4,19 +4,50 @@
 	<meta charset="UTF-8">
 	<title>stub</title>
 	<link rel="stylesheet" href="style.css">
+	<style>
+		.table-section {
+			border-radius: 20px 20px 0 0;
+			background:blue;
+			padding: 15px;
+			width:100%;
+		}
+		.table {
+			border: 2px solid #000000;
+			width: 100%;
+			font-size: 14pt;
+			text-align: center;
+			border-collapse: collapse;
+		}
+		.table caption{
+			font-size: 18pt;
+			text-align: center;
+		}
+		.table tr {
+			border-top: 1px solid #000000;
+		}
+		.table td, th {
+			padding: 10px;
+		}
+		.table th {
+			border: 1px solid #000000;
+		}
+	</style>
 </head>
 <body>
 	<!-- Таблица будет реализована в дальнейшем -->
 	
-	<center>
-		<section id="table-content">
-			<table border width=50%>
+	<section>
+		<section class="table-section">
+			<table class="table">
 				<caption>Таблица лидеров</caption>
-				<tr><td>1</td><td>2</td><td>3</td></tr>
-				<tr><td>4</td><td>5</td><td>6</td></tr>
+				<tr><th>Имя</th><th>Лучший счет</th><th>Кол-во игр</th></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
+				<tr><td>Валера</td><td>34</td><td>300</td></tr>
+				<tr><td>Валера</td><td>42</td><td>300</td></tr>
 			</table>
 		</section>
-	</center>
+	</section>
 	
 	
 </body>
