--- a/site_form/info/guide.html
+++ b/site_form/info/guide.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Соревновательная Площадка</title>
+	<title>stub</title>
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="AccountStyle.css">
 </head>
 <body>
 	<header class="header">
@@ -27,18 +26,20 @@
 		</nav>
 		<!-- main-menu -->
 	</header>
+	<main class="main">
+	<nav>
+		<p>Меню с разными темами</p>
+		<ul>
+		<li>О игре</li>
+		<li>Основные команды</li>
+		<li>и т.д.</li>
+		</ul>
+	</nav>
 	
-	<main class="main centered-box">
-		<form method="post" action="" class="focus-block form-field">
-			<h2>ВХОД</h2>
-			<p>
-				<label>Логин <input type="text" name="login_in" id="login_in"></label>
-			</p>
-			<p>
-				<label>Пароль <input type="password" name="password_in" id="password_in"></label>
-			</p>
-			<p><input type="submit" value="Вход"></p>
-		</form>
+	<section>
+		<p>Гайд по определенной теме</p>
+		<p>Для каждой теме своя информация</p>
+	</section>
 	</main>
 	
 	<footer class="footer">
@@ -51,6 +52,6 @@
 			</ul>
 		</div>
 	</footer>
+
 </body>
 </html>
-
