--- a/site_form/Game/table.html
+++ b/site_form/Game/table.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <!-- Этот файл шаблон -->
 	<meta charset="UTF-8">
-	<title>stub</title>
-	<link rel="stylesheet" href="style.css">
+	<title>Соревновательная Площадка</title>
+	<link rel="stylesheet" href="../style.css">
+	<link rel="icon" href="logo.png" sizes="32x32">
+	
 	<style>
 		.table-section {
 			border-radius: 20px 20px 0 0;
-			background:blue;
+			background: #F1B178;
 			padding: 15px;
 			width:100%;
 		}
 		.table {
 			border: 2px solid #000000;
+			background: #ffffff;
 			width: 100%;
 			font-size: 14pt;
 			text-align: center;
@@ -32,11 +35,33 @@
 			border: 1px solid #000000;
 		}
 	</style>
+
 </head>
 <body>
-	<!-- Таблица будет реализована в дальнейшем -->
+	<header class="header">
+		<div class="headline">
+			<p><img src="logo.png" >Соревновательная Площадка</p>
+		</div><!-- Лого / Название width=40pt-->
+		<nav>
+			<ul class="head-menu">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Аккаунт</a></li>
+				<li><a href="#">Игра</a>
+					<ul class="submenu">
+						<li><a href="#">Играть</a></li>
+                        <li><a href="#">Создать Сессию</a></li>
+						<li><a href="#">Лидеры</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Справочник</a></li>
+			</ul>
+		</nav>
+		<!-- main-menu -->
+	</header>
 	
-	<section>
+	<main class="main centered-box">
+		<!-- Таблица будет реализована в дальнейшем -->
+
 		<section class="table-section">
 			<table class="table">
 				<caption>Таблица лидеров</caption>
@@ -45,10 +70,28 @@
 				<tr><td>Валера</td><td>22</td><td>300</td></tr>
 				<tr><td>Валера</td><td>34</td><td>300</td></tr>
 				<tr><td>Валера</td><td>42</td><td>300</td></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
+				<tr><td>Валера</td><td>34</td><td>300</td></tr>
+				<tr><td>Валера</td><td>42</td><td>300</td></tr>
+				<tr><td>Валера</td><td>41</td><td>300</td></tr>
+				<tr><td>Валера</td><td>22</td><td>300</td></tr>
 			</table>
 		</section>
-	</section>
-	
-	
+	</main>
+
+	<footer class="footer">
+		<div class="footer-info">
+			Проект был создан:
+			<ul>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			<li>sometext sometext</li>
+			</ul>
+		</div>
+	</footer>
+
 </body>
 </html>
+
+
