Изменения в расположении кнопок

--- a/site_form/Game/viewing.html
+++ b/site_form/Game/viewing.html
@@ -33,11 +33,13 @@
 
 		<section class="focus-block">
 			<p>Информация о игре:</p>
-			<canvas height='320' width='480' style = "border:2px solid black"
-			id='game_screen'>#</canvas>
-
+			<div>
+				<canvas height='300' width='400'  style = "border:2px solid blackж; "
+				id='game_screen'>#</canvas>
+			</div>
 			<br>
-			<button type = "button">Остановить/Продолжить</button>
+			<input type = "button" id="1" value="Назад">
+			<input type = "button" id="stop" value="Запуск">
 		</section>
 	</main>
 
