--- a/site_form/Game/viewing.html
+++ b/site_form/Game/viewing.html
@@ -30,16 +30,24 @@
 	
 	<main class="main centered-box">
 		<!-- Таблица будет реализована в дальнейшем -->
-
 		<section class="focus-block">
-			<p>Информация о игре:</p>
+		<h2>Просмотр Игры</h2>
 			<div>
-				<canvas height='300' width='400'  style = "border:2px solid blackж; "
+			<p>Информация о игре:</p>
+				<dl>
+					<dt>Кол-во игроков</dt>
+						<dd>6</dd>
+					<dt>Размер карты</dt>
+						<dd>32x48</dd>
+				</dl>
+			</div>
+			<div>
+				<canvas height='600' width='800'  style = "border:4px solid black; "
 				id='game_screen'>#</canvas>
 			</div>
-			<br>
-			<input type = "button" id="1" value="Назад">
-			<input type = "button" id="stop" value="Запуск">
+			<div class="centered-box">
+				<input type = "button" id="stop" value="Запуск">
+			</div>
 		</section>
 	</main>
 
