--- a/site_form/Game/viewing.html
+++ b/site_form/Game/viewing.html
@@ -62,14 +62,14 @@
 					<dt>Размер карты</dt>
 						<dd id="info_map">32x48</dd>
 				</dl>
-				<!--<div>
+				<div>
 					<hr>
 					<h3>Список участиков</h3>
 					<ul>
 						<li>Валера 1</li>
 						<li>Валера 2</li>
 					</ul>
-				</div> -->
+				</div>
 			</div>
 		</section>
 	</main>
