Обновил панель управления видео

--- a/site_form/Game/viewing.html
+++ b/site_form/Game/viewing.html
@@ -39,17 +39,17 @@
 					</div>
 					<div class="control-buttons">
 						<input type = "button" id="stop" value="Запуск" class="control-btn">
+
 						<div class="replay-setting">
-							<div class="control-btn">&#9776;</div>
-							<div class="replay-setting-menu">
-								<input type="button" id="reverse" value="reverse" class="replay-reverse control-btn">
-								<select id="speed_selection" class="replay-speed control-btn">
-									<option value="0.5">x0.5</option>
-									<option selected value="1">x1</option>
-									<option value="2">x2</option>
-									<option value="4">x4</option>
-								</select>
-							</div>
+							<input type="button" id="reverse" value="reverse" class="control-btn">
+							
+							<select id="speed_selection" class="control-btn">
+								<option value="0.5">x0.5</option>
+								<option selected value="1">x1</option>
+								<option value="2">x2</option>
+								<option value="4">x4</option>
+							</select>
+							
 						</div>
 					</div>
 				</div>
@@ -62,14 +62,14 @@
 					<dt>Размер карты</dt>
 						<dd id="info_map">32x48</dd>
 				</dl>
-				<div>
+				<!--<div>
 					<hr>
 					<h3>Список участиков</h3>
 					<ul>
 						<li>Валера 1</li>
 						<li>Валера 2</li>
 					</ul>
-				</div>
+				</div>-->
 			</div>
 		</section>
 	</main>
