Добавлена html форма изменения пароля

--- a/site_form/profile/profile_setting.html
+++ b/site_form/profile/profile_setting.html
@@ -71,6 +71,20 @@
 					<a href="#" class="form-btn">Отмена</a> <!-- TODO: Добавить ссылку на профиль -->
 				</div>
 			</form>
+			
+			<form method="post" action="#" class="focus-block form-field">
+				<h2>ВХОД</h2>
+				<p>
+					<label>Пароль <input type="text" name="login_in" id="login_in"></label>
+				</p>
+				<p>
+					<label>Повторите пароль <input type="password" name="password_in" id="password_in"></label>
+				</p>
+
+				<div class="form-menu centered-box">
+					<input type="submit" value="Изменить" class="form-btn">
+				</div>
+			</form>
 		</section>
 	</main>
 
