Убраны лишние todo

--- a/site_form/profile/profile_setting.html
+++ b/site_form/profile/profile_setting.html
@@ -43,11 +43,9 @@
 			<form method="post" action="/profile" class="focus-block form-field">
 				<h2>Именение профиля</h2>
 				<div>
-					<!-- TODO: добавить поле для изменения иконки профиля -->
 					<p><label>Иконка <input type="file" name="logo" accept="image/*,image/jpeg"></label></p>
 				</div>
 				<div>
-					<!-- TODO: При редактировании в поля должны вставляться старые данные (value) -->
 					<p><label>Имя <input type="text" name="FirstName" required value=""></label></p>
 					<p><label>Фамилия <input type="text" name="LastName" required value=""></label></p>
 					<p>
@@ -67,8 +65,8 @@
 				</div>
 				<br>
 				<div class="form-menu">
-					<input type="submit" value="Изменить" class="form-btn"> <!-- TODO: Добавить возможность изменять данные профиля -->
-					<a href="#" class="form-btn">Отмена</a> <!-- TODO: Добавить ссылку на профиль -->
+					<input type="submit" value="Изменить" class="form-btn">
+					<a href="#" class="form-btn">Отмена</a>
 				</div>
 			</form>
 			
