Добавлени функция вствки сессии в html список на сайте

--- a/site_form/Game/choose.html
+++ b/site_form/Game/choose.html
@@ -38,7 +38,7 @@
 		
 			<div>
 				<h2>Список доступных комнат</h2>
-				<section class="session-list">
+				<section class="session-list" id="session_list">
 					<div class="session">
 						<div class="session-head"> <!-- Загаловок -->
 							<h3>ID: <span>23112</span></h3>
@@ -61,8 +61,6 @@
 		</section>
 	</main>
 	
-	<script src="scripts.js"></script>
-
 	<footer class="footer">
 		<div class="footer-info">
 			Проект был создан:
@@ -74,7 +72,9 @@
 		</div>
 	</footer>
 	
-	<script src="choose.js"></script>
+	<script src="choose.js">
+
+	</script>
 </body>
 </html>
 
