--- a/site_form/Game/waiting_game.html
+++ b/site_form/Game/waiting_game.html
@@ -29,39 +29,33 @@
 	</header>
 	
 	<main class="main centered-box">
-		<section class="focus-block">
-			<form method="post" action="" class="form-field" id="form">
-				<h2>Вход в игру</h2>
-				<div class="form-menu">
-					<label>Id Игры <input type="text" name="game_id" id="game_id" required></label>
-					<input type="submit" value="Подключится" class="form-btn" style="margin-left: auto;">
-				</div>
-			</form>
-		
-			<div>
-				<h2>Список доступных комнат</h2>
-				<section class="session-list" id="session_list">
-					<!-- <div class="session">
-						<div class="session-head"> 
-							<h3>ID: <span>23112</span></h3>
-							<input type="button" value="Выбор" class="btn">
-						</div>
-						<div class="session-info">
-							<ul>
-								<li>Колво участников: <span>44</span></li>
-								<li>Размер карты: <span>44x44</span></li>
-							</ul>
-							<ul>
-								<li>Дата начала: <span>10.10.2021</span></li>
-								<li>Длительность: <span>45 min</span></li>
-							</ul>
-						</div>
-					</div> -->
-				</section>
+		<section class="focus-block waiting-room">
+			<h2>Комната ожидания начал игры (id: <span>123132</span>)</h2>
+			<h3>Инормация о игре</h3>
+			<div class="session-info">
+				<table>
+					<tr><td>Колво участников:</td><td>1 / 44</td></tr>
+					<tr><td>Размер карты:</td><td>44x44</td></tr>
+				</table>
+				<table>
+					<tr><td>Длительность:</td><td>45 min</td></tr>
+					<tr><td>Дата начала:</td><td>12:00 - 10.10.2021</td></tr>
+					<tr><td>Дата начала:</td><td>12:45 - 10.10.2021</td></tr>
+				</table>
+			</div>
+			<div class="dashboard">
+				<p class="dashboard-info">Статус игры: <span id="game_status">Игра уже началась</span></p>
+				<input type="button" value="В Бой!" class="btn">
 			</div>
 		</section>
-		
-		<script src="choose.js"></script>
+		<!--
+		Статус игры:
+		Игра уже началась
+		Игра закончилась
+
+		В Бой!
+		Просмотр демо
+		-->
 	</main>
 	
 	<footer class="footer">
